tests/v05-vertical-slice/reject/use_after_consume.hew
fn main() -> string {
  let s = "hello";
  let t = s;
  return s;
}
